# finances

./: pyproject.toml
src/: taxes.py
tests/: test_taxes.py
